--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:gravity="end"
-        tools:text="1231233140928"
         android:textColor="#aaaaaa"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/keyPad_Tl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="1231233140928" />
 
 
     <TableLayout
@@ -316,5 +316,75 @@
         </TableRow>
 
     </TableLayout>
+
+    <!--    새 창이 열리는 기능 구현-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/history_Cl"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/keyPad_Tl"
+        tools:visibility="visible"
+
+        >
+        <!--        계산 기록을 지울 수 있는 버튼, 스크롤 뷰-->>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/close_Btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:onClick="closeHistoryBtnClicked"
+            android:stateListAnimator="@null"
+            android:text="닫기"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/close_Btn"
+            app:layout_constraintBottom_toTopOf="@+id/historyClear_Btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/history_Ll"
+                android:orientation="vertical"
+
+                />
+
+        </ScrollView>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/historyClear_Btn"
+            android:onClick="historyClearBtnClicked"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="47dp"
+            android:layout_marginEnd="47dp"
+            android:layout_marginBottom="38dp"
+            android:background="@drawable/button_background_green"
+            android:stateListAnimator="@null"
+            android:text="계산기록 삭제"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
